[package]
name = "slug"
keywords = ["slugify", "slug", "id"]
version = "0.2.0"
authors = ["Steven Allen <steven@stebalien.com>", "Henrique Spadim <henrique@spadim.com.br>"]

description = "Convert a unicode string to a slug"
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/Stebalien/slug-rs"
homepage = "https://github.com/Stebalien/slug-rs"
documentation = "https://docs.rs/slug"

[dependencies]
deunicode = "1"

[dev-dependencies]
criterion = { version = "0.3", features = ["real_blackbox"] }

[[bench]]
name = "benchmarks"
harness = false
